--- a/linux/docker-compose.yaml
+++ b/linux/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
     container_name: homeassistant
     image: "ghcr.io/home-assistant/home-assistant:stable"
     volumes:
-      - ${KHA_CONFIG_DIR}/hass:/config
+      - ${KHC_ROOT}/linux/config/hass:/config
       - /etc/localtime:/etc/localtime:ro
     restart: unless-stopped
     privileged: true
