--- a/linux/docker-compose.yaml
+++ b/linux/docker-compose.yaml
@@ -14,9 +14,8 @@ services:
     image: eclipse-mosquitto
     container_name: mosquitto
     volumes:
-      - /opt/mosquitto:/mosquitto  # TODO, config somewhere else
-      - /opt/mosquitto/data:/mosquitto/data
-      - /opt/mosquitto/log:/mosquitto/log
+      - ${KHC_ROOT}/linux/config/mosquitto:/mosquitto/config
+      - /opt/mosquitto:/mosquitto
     ports:
       - 1883:1883
       - 9001:9001
@@ -40,10 +39,7 @@ services:
       # Instead, use the /dev/serial/by-id/X serial device for your Z-Wave stick.
       - '/dev/serial/by-id/usb-0658_0200-if00:/dev/zwave'
     volumes:
-      - /opt/zwave-js/:/usr/src/app/store
-      #- zwave-config:/usr/src/app/store
-   # Or by using local folder
-   # - ./store:/usr/src/app/store
+      - ${KHC_ROOT}/linux/config/zwave-js/:/usr/src/app/store
     ports:
       - "8091:8091" # port for web interface
       - "3000:3000" # port for Z-Wave JS websocket server
