--- a/linux/config/mosquitto/mosquitto.conf
+++ b/linux/config/mosquitto/mosquitto.conf
@@ -547,7 +547,7 @@
 # See the TLS client require_certificate and use_identity_as_username options
 # for alternative authentication options. If a plugin is used as well as
 # password_file, the plugin check will be made first.
-#password_file
+password_file /mosquitto/config/mosquitto.passwd 
 
 # Access may also be controlled using a pre-shared-key file. This requires
 # TLS-PSK support and a listener configured to use it. The file should be text
@@ -913,4 +913,4 @@ persistence_location /mosquitto/data/
 log_dest stderr
 log_dest file /mosquitto/log/mosquitto.log
 
-allow_anonymous true
+#allow_anonymous true
