--- a/linux/config/hass/configuration.yaml
+++ b/linux/config/hass/configuration.yaml
@@ -37,7 +37,16 @@ input_boolean:
   bedroom_sound_mix_desk_seat_with_speakers_active:
   bedroom_sound_mix_piano_seat_with_headphones_active:
   bedroom_sound_mix_desk_seat_with_headphones_active:
+  bedroom_plug_piano_speakers:
+  bedroom_plug_desk_speakers:
+  bedroom_plug_piano_led_strip:
+  bedroom_plug_studio_light:
+  bedroom_plug_computer_monitor:
+  bedroom_enable_dimmer_desk_light:
   livingroom_qn90a_ambient_mode:
+  livingroom_plug_xmas_lights:
+  livingroom_plug_nvidia_shield:
+  diningroom_plug_xmas_lights:
 
 # ----------------------------------------------------------------------------
 # Floats.
@@ -60,6 +69,26 @@ input_number:
     max: 1
     step: 0.01
   bedroom_windows_pc_fader_5:
+    min: 0
+    max: 1
+    step: 0.01
+  bedroom_windows_pc_dial_1:
+    min: 0
+    max: 1
+    step: 0.01
+  bedroom_windows_pc_dial_2:
+    min: 0
+    max: 1
+    step: 0.01
+  bedroom_windows_pc_dial_3:
+    min: 0
+    max: 1
+    step: 0.01
+  bedroom_windows_pc_dial_4:
+    min: 0
+    max: 1
+    step: 0.01
+  bedroom_windows_pc_dial_5:
     min: 0
     max: 1
     step: 0.01
